# pandas-categorical

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  testing_package.yml
examples/: Problems of pandas categorical dtypes (solution).ipynb  Problems of pandas categorical dtypes.ipynb
pandas_categorical/: __init__.py  utils.py
tests/: data_for_tests.py  test_utils.py
