[tool.poetry]
name = "pandas-categorical"
version = "0.2.1"
description = "A set of functions for working with categorical columns in pandas"
authors = ["KonstantinLosev <loskost@ya.ru>"]
readme = "README.md"
packages = [{include = "pandas_categorical"}]

[tool.poetry.dependencies]
python = ">=3.7, <3.12"
pandas = [
    {version = ">=1.0.0, <1.4.0", python = "~3.7"},
    {version = "^1.4.0", python = "~3.8"},
    {version = "^2.0.0", python = ">=3.9, <3.12"},
]
numpy = [
    {version = ">=1.19.0, <1.22.0", python = "~3.7"},
    {version = ">=1.22.0, <1.25.0", python = "~3.8"},
    {version = ">=1.25.0", python = ">=3.9, <3.12"},
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
